--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio Website</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Alex</a>
+        <a href="#" class="logo">JAY</a>
 
         <nav>
             <a href="#" class="active"> Home</a>
@@ -26,7 +26,7 @@
             <img src="main.jpg" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi, It's <span>Alex</span></h1>
+            <h1>Hi, It's <span>Jay</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
             <div class="social-icons">
@@ -39,4 +39,5 @@
         </div>
     </section>
 </body>
+
 </html>
