--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="instagram.com/https.jay__529"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="#" class="btn">Hire me</a>
         </div>
@@ -41,4 +41,5 @@
 </body>
 
 </html>
+
 
