--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 
         <nav>
             <a href="#" class="active"> Home</a>
-            <a href="#" >Services</a>
-            <a href="#" >Skills</a>
-            <a href="#" >Education</a>
-            <a href="#" >Experience</a>
-            <a href="#" >Contact</a>
+            <a href="skills.html" >Skills</a>
+            <a href="education.html" >Education</a>
+            <a href="contact.html" >Contact</a>
         </nav>
     </header>
     <section class="home">
@@ -41,5 +39,6 @@
 </body>
 
 </html>
+
 
 
