--- a/skills.html
+++ b/skills.html
@@ -4,17 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Skills - Jay Somning Barve</title>
+  <title>Skills - SKILLS</title>
 </head>
 <body>
   <header>
   <a href="index.html" class="logo">Jay Somning Barve</a>
   <nav>
     <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
     <a href="skills.html" class="active">Skills</a>
     <a href="education.html">Education</a>
-    <a href="experience.html">Experience</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
