--- a/skills.html
+++ b/skills.html
@@ -4,96 +4,176 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skills - Jay Somning Barve</title>
-  <link rel="stylesheet" href="style.css">
   <style>
-    /* === Global Reset === */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        text-decoration: none;
+        border: none;
+        outline: none;
+        font-family: 'Poppins', sans-serif;
     }
 
-    body {
-      background: #f4f6f9;
-      color: #333;
-      line-height: 1.6;
+    html{
+        font-size: 62.5%;
     }
 
-    /* === Header === */
-    header {
-      background: #222;
-      color: #fff;
-      padding: 15px 40px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    body{
+        width: 100%;
+        height: 100vh;
+        overflow-x: hidden;
+        background-color: black;
+        color: white;
     }
 
-    header .logo {
-      font-size: 20px;
-      font-weight: 600;
-      color: #fff;
-      text-decoration: none;
+    header{
+        margin-top: 20px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 1rem 9%;
+        background-color: transparent;
+        filter: drop-shadow(10px);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 100;
     }
 
-    nav a {
-      color: #bbb;
-      margin-left: 20px;
-      text-decoration: none;
-      font-size: 16px;
-      transition: color 0.3s;
+    .logo{
+        font-size: 3rem;
+        color: #b74b4b;
+        font-weight: 800;
+        cursor: pointer;
+        transition: 0.5s ease;
+    }
+
+    .logo:hover{
+        transform: scale(1.1);
+    }
+
+    nav a{
+        font-size: 1.8rem;
+        color: white;
+        margin-left: 4rem;
+        font-weight: 500;
+        transition: 0.3s ease;
+        border-bottom: 3px solid transparent;
     }
 
     nav a:hover,
-    nav a.active {
-      color: #4cafef;
+    nav a.active{
+        color: #b74b4b;
+        border-bottom: 3px solid #b74b4b;
     }
 
-    /* === Section === */
-    section {
-      max-width: 900px;
-      margin: 50px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    section{
+        min-height: 100vh;
+        padding: 8rem 9% 5rem;
     }
 
-    section h1 {
-      font-size: 28px;
-      color: #222;
-      margin-bottom: 15px;
-      border-left: 5px solid #4cafef;
-      padding-left: 10px;
+    /* === Skills Section === */
+    .skills h1 {
+        font-size: 4rem;
+        margin-bottom: 2rem;
+        color: white;
     }
 
-    section p {
-      font-size: 16px;
-      margin-bottom: 25px;
+    .skills h1 span {
+        color: #b74b4b;
     }
 
-    /* === Skills List === */
+    .skills p {
+        font-size: 1.6rem;
+        margin-bottom: 3rem;
+        color: #ddd;
+        max-width: 800px;
+    }
+
     .skills-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 15px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 2rem;
     }
 
     .skill {
-      background: #f9fbff;
-      border: 1px solid #e0e0e0;
-      border-radius: 10px;
-      padding: 15px;
-      text-align: center;
-      font-weight: 500;
-      transition: transform 0.3s, box-shadow 0.3s;
+        background: #161616;
+        border: 2px solid #b74b4b;
+        border-radius: 1rem;
+        padding: 2rem;
+        text-align: center;
+        font-size: 1.8rem;
+        font-weight: 600;
+        color: white;
+        transition: 0.3s ease;
     }
 
     .skill:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-      border-color: #4cafef;
+        transform: translateY(-5px);
+        box-shadow: 0 0 25px #b74b4b;
+    }
+
+    /* === Fade-in Animation for Skills === */
+    .fade-in {
+        opacity: 0;
+        transform: translateY(30px);
+        animation: fadeInUp 1s ease forwards;
+    }
+
+    .fade-in:nth-child(1) { animation-delay: 0.2s; }
+    .fade-in:nth-child(2) { animation-delay: 0.4s; }
+    .fade-in:nth-child(3) { animation-delay: 0.6s; }
+    .fade-in:nth-child(4) { animation-delay: 0.8s; }
+    .fade-in:nth-child(5) { animation-delay: 1s; }
+    .fade-in:nth-child(6) { animation-delay: 1.2s; }
+    .fade-in:nth-child(7) { animation-delay: 1.4s; }
+    .fade-in:nth-child(8) { animation-delay: 1.6s; }
+
+    @keyframes fadeInUp {
+        from {
+            opacity: 0;
+            transform: translateY(30px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    @media(max-width:995px){
+        nav{
+            position: absolute;
+            display: none;
+            top: 0;
+            right: 0;
+            width: 40%;
+            border-left: 3px solid #b74b4b;
+            border-bottom: 3px solid #b74b4b;
+            border-bottom-left-radius: 2rem;
+            padding: 1rem solid;
+            background-color: #161616;
+        }
+
+        nav.active{
+            display: block;
+        }
+
+        nav a{
+            display: block;
+            font-size: 2rem;
+            margin: 3rem 0;
+        }
+
+        nav a:hover,
+        nav a.active{
+            padding: 1rem;
+            border-radius: 0.5rem;
+            border-bottom: 0.5rem solid #b74b4b;
+        }
     }
   </style>
 </head>
@@ -108,8 +188,8 @@
     </nav>
   </header>
 
-  <section>
-    <h1>My Skills</h1>
+  <section class="skills">
+    <h1><span>My Skills</span></h1>
     <p>
       My name is <strong>Jay Somning Barve</strong>, a second-year BCA student at 
       <strong>MIT ADT University</strong>.  
@@ -120,14 +200,14 @@
     </p>
 
     <div class="skills-list">
-      <div class="skill">HTML</div>
-      <div class="skill">CSS</div>
-      <div class="skill">JavaScript</div>
-      <div class="skill">Cybersecurity</div>
-      <div class="skill">Cloud Computing</div>
-      <div class="skill">Bug Bounty</div>
-      <div class="skill">Beta Testing</div>
-      <div class="skill">System Security</div>
+      <div class="skill fade-in">HTML</div>
+      <div class="skill fade-in">CSS</div>
+      <div class="skill fade-in">JavaScript</div>
+      <div class="skill fade-in">Cybersecurity</div>
+      <div class="skill fade-in">Cloud Computing</div>
+      <div class="skill fade-in">Bug Bounty</div>
+      <div class="skill fade-in">Beta Testing</div>
+      <div class="skill fade-in">System Security</div>
     </div>
   </section>
 </body>
