--- a/contact.html
+++ b/contact.html
@@ -3,21 +3,203 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <title>Contact - Jay Somning Barve</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        text-decoration: none;
+        border: none;
+        outline: none;
+        font-family: 'Poppins', sans-serif;
+    }
+
+    html{
+        font-size: 62.5%;
+    }
+
+    body{
+        width: 100%;
+        height: 100vh;
+        overflow-x: hidden;
+        background-color: black;
+        color: white;
+    }
+
+    header{
+        margin-top: 20px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 1rem 9%;
+        background-color: transparent;
+        filter: drop-shadow(10px);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 100;
+    }
+
+    .logo{
+        font-size: 3rem;
+        color: #b74b4b;
+        font-weight: 800;
+        cursor: pointer;
+        transition: 0.5s ease;
+    }
+
+    .logo:hover{
+        transform: scale(1.1);
+    }
+
+    nav a{
+        font-size: 1.8rem;
+        color: white;
+        margin-left: 4rem;
+        font-weight: 500;
+        transition: 0.3s ease;
+        border-bottom: 3px solid transparent;
+    }
+
+    nav a:hover,
+    nav a.active{
+        color: #b74b4b;
+        border-bottom: 3px solid #b74b4b;
+    }
+
+    section{
+        min-height: 100vh;
+        padding: 8rem 9% 5rem;
+    }
+
+    /* === Contact Section === */
+    .contact h1 {
+        font-size: 4rem;
+        margin-bottom: 2rem;
+        color: white;
+    }
+
+    .contact h1 span {
+        color: #b74b4b;
+    }
+
+    .contact-info {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        margin-top: 3rem;
+        font-size: 1.8rem;
+    }
+
+    .contact-card {
+        background: #161616;
+        border: 2px solid #b74b4b;
+        border-radius: 1rem;
+        padding: 2rem;
+        transition: 0.3s ease;
+        opacity: 0;
+        transform: translateY(30px);
+        animation: fadeInUp 1s ease forwards;
+    }
+
+    .contact-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 0 25px #b74b4b;
+    }
+
+    .contact-card:nth-child(1) { animation-delay: 0.3s; }
+    .contact-card:nth-child(2) { animation-delay: 0.6s; }
+    .contact-card:nth-child(3) { animation-delay: 0.9s; }
+
+    .contact-card h2 {
+        font-size: 2rem;
+        color: #b74b4b;
+        margin-bottom: 0.5rem;
+    }
+
+    .contact-card p {
+        font-size: 1.6rem;
+        color: #ccc;
+    }
+
+    @keyframes fadeInUp {
+        from {
+            opacity: 0;
+            transform: translateY(30px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    @media(max-width:995px){
+        nav{
+            position: absolute;
+            display: none;
+            top: 0;
+            right: 0;
+            width: 40%;
+            border-left: 3px solid #b74b4b;
+            border-bottom: 3px solid #b74b4b;
+            border-bottom-left-radius: 2rem;
+            padding: 1rem solid;
+            background-color: #161616;
+        }
+
+        nav.active{
+            display: block;
+        }
+
+        nav a{
+            display: block;
+            font-size: 2rem;
+            margin: 3rem 0;
+        }
+
+        nav a:hover,
+        nav a.active{
+            padding: 1rem;
+            border-radius: 0.5rem;
+            border-bottom: 0.5rem solid #b74b4b;
+        }
+    }
+  </style>
 </head>
 <body>
   <header>
-  <a href="index.html" class="logo">Jay Somning Barve</a>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="skills.html">Skills</a>
-    <a href="contact.html" class="active">Contact</a>
-  </nav>
-</header>
+    <a href="index.html" class="logo">Jay Somning Barve</a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="skills.html">Skills</a>
+      <a href="education.html">Education</a>
+      <a href="contact.html" class="active">Contact</a>
+    </nav>
+  </header>
 
-  <section>
-    <h1>Contact Me</h1><p>Email: jbthor5290@gmail.com</p><p>LinkedIn: Your LinkedIn profile link</p><p>GitHub: Your GitHub profile link</p>
+  <section class="contact">
+    <h1><span>Contact Me</span></h1>
+
+    <div class="contact-info">
+      <div class="contact-card">
+        <h2>Phone</h2>
+        <p>+91 9307570771</p>
+      </div>
+
+      <div class="contact-card">
+        <h2>Email</h2>
+        <p>jbthor5290@gmail.com</p>
+      </div>
+
+      <div class="contact-card">
+        <h2>Address</h2>
+        <p>PCMC, Maharashtra, India</p>
+      </div>
+    </div>
   </section>
 </body>
 </html>
