--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">JAY</a>
+        <a href="#" class="logo">Welcome, Buddy!</a>
 
         <nav>
             <a href="#" class="active"> Home</a>
@@ -39,6 +39,7 @@
 </body>
 
 </html>
+
 
 
 
