--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>Hello My name is Jay Somning Barve, a second-year BCA student at MIT ADT University. I have hands-on experience in beta testing and bug bounty, and I am currently enhancing my skills in cybersecurity and cloud computing. I am passionate about exploring system security, testing environments, and contributing to secure and efficient digital solutions.</p>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="instagram.com/https.jay__529"><i class="fa-brands fa-instagram"></i></a>
+  <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
+  <a href="https://instagram.com/https.jay__529" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <a href="#" class="btn">Hire me</a>
         </div>
@@ -39,6 +39,7 @@
 </body>
 
 </html>
+
 
 
 
