--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>Hello My name is Jay Somning Barve, a second-year BCA student at MIT ADT University. I have hands-on experience in beta testing and bug bounty, and I am currently enhancing my skills in cybersecurity and cloud computing. I am passionate about exploring system security, testing environments, and contributing to secure and efficient digital solutions.</p>
             <div class="social-icons">
-  <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-  <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
-  <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
+  <a href="https://github.com/jaybarve" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://linkedin.com/in/https://www.linkedin.com/authwall?trk=bf&trkInfo=AQGqxl-mE58rfQAAAZkeE2K4pE8iuAJ6zkucx4qW2Uie57ypJh-TTjnRKiRVXTa06D1UQH2vmKL3ZFU6v9WZyRJTW0-4VU_6luJPZfL8XrlWL4j5coSjDkaXlw_GGA91-enaReo=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjay-barve-66191b334%3Futm_source%3Dshare%26utm_campaign%3Dshare_via%26utm_content%3Dprofile%26utm_medium%3Dandroid_app" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href="https://x.com/Barve1212" target="_blank"><i class="fab fa-twitter"></i></a>
   <a href="https://instagram.com/https.jay__529" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <a href="#" class="btn">Hire me</a>
@@ -39,6 +39,7 @@
 </body>
 
 </html>
+
 
 
 
