--- a/contact.html
+++ b/contact.html
@@ -201,5 +201,8 @@
       </div>
     </div>
   </section>
+  <footer>
+    <p>Created by <span>JAY BARVE</span> | Secured By <span>Black Devil 2025</span></p>
+  </footer>
 </body>
 </html>
