--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Welcome, Buddy!</a>
-
-        <nav>
-            <a href="#" class="active"> Home</a>
-            <a href="skills.html" >Skills</a>
-            <a href="education.html" >Education</a>
-            <a href="contact.html" >Contact</a>
-        </nav>
-    </header>
+  <a href="index.html" class="logo">Jay Somning Barve</a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="skills.html">Skills</a>
+    <a href="education.html">Education</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <div class="menu-toggle"><i class="fas fa-bars"></i></div>
+</header>
     <section class="home">
         <div class="home-img">
             <img src="main.jpg" alt="">
@@ -39,6 +39,7 @@
 </body>
 
 </html>
+
 
 
 
