--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 
 </html>
 
+<script>
+  const menuToggle = document.querySelector(".menu-toggle");
+  const nav = document.querySelector("nav");
+
+  menuToggle.addEventListener("click", () => {
+    nav.classList.toggle("active");
+  });
+</script>
+
 
 
 
