--- a/education.html
+++ b/education.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Education - Jay Somning Barve</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 
@@ -177,14 +176,16 @@
 </head>
 <body>
   <header>
-    <a href="index.html" class="logo">Jay Somning Barve</a>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="skills.html">Skills</a>
-      <a href="education.html" class="active">Education</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+  <a href="index.html" class="logo"/a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="skills.html">Skills</a>
+    <a href="education.html">Education</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <div class="menu-toggle"><i class="fas fa-bars"></i></div>
+</header>
+
 
   <section class="education">
     <h1><span>My Education</span></h1>
