--- a/contact.html
+++ b/contact.html
@@ -172,14 +172,15 @@
 </head>
 <body>
   <header>
-    <a href="index.html" class="logo">Jay Somning Barve</a>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="skills.html">Skills</a>
-      <a href="education.html">Education</a>
-      <a href="contact.html" class="active">Contact</a>
-    </nav>
-  </header>
+  <a href="index.html" class="logo"/a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="skills.html">Skills</a>
+    <a href="education.html">Education</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <div class="menu-toggle"><i class="fas fa-bars"></i></div>
+</header>
 
   <section class="contact">
     <h1><span>Contact Me</span></h1>
