--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-  <a href="index.html" class="logo">Jay Somning Barve</a>
+  <a href="index.html" class="logo">Welcome, Buddy!</a>
   <nav>
     <a href="index.html">Home</a>
     <a href="skills.html">Skills</a>
@@ -48,6 +48,7 @@
     nav.classList.toggle("active");
   });
 </script>
+
 
 
 
