--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
-  <a href="index.html" class="logo">Welcome, Buddy!</a>
+   <header>
+  <div class="menu-toggle"><i class="fas fa-bars"></i></div>
+  <a href="index.html" class="logo"/a>
   <nav>
     <a href="index.html">Home</a>
     <a href="skills.html">Skills</a>
     <a href="education.html">Education</a>
     <a href="contact.html">Contact</a>
   </nav>
-  <div class="menu-toggle"><i class="fas fa-bars"></i></div>
 </header>
     <section class="home">
         <div class="home-img">
@@ -48,6 +48,7 @@
     nav.classList.toggle("active");
   });
 </script>
+
 
 
 
