--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <header>
-  <div class="menu-toggle"><i class="fas fa-bars"></i></div>
+  <div class="menu-toggle"><i class="fas fa-bars">Welcome Buddy!</i></div>
   <a href="index.html" class="logo"/a>
   <nav>
     <a href="index.html">Home</a>
@@ -48,6 +48,7 @@
     nav.classList.toggle("active");
   });
 </script>
+
 
 
 
