--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="index.html">Home</a>
     <a href="skills.html">Skills</a>
     <a href="education.html">Education</a>
+    <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
@@ -48,6 +49,7 @@
     nav.classList.toggle("active");
   });
 </script>
+
 
 
 
