--- a/contact.html
+++ b/contact.html
@@ -177,6 +177,7 @@
     <a href="index.html">Home</a>
     <a href="skills.html">Skills</a>
     <a href="education.html">Education</a>
+    <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
   </nav>
   <div class="menu-toggle"><i class="fas fa-bars"></i></div>
