--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <a href="https://x.com/Barve1212" target="_blank"><i class="fab fa-twitter"></i></a>
   <a href="https://instagram.com/https.jay__529" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Hire me</a>
+            <a href="music.html" class="btn">Hire me</a>
         </div>
     </section>
 </body>
@@ -49,6 +49,7 @@
     nav.classList.toggle("active");
   });
 </script>
+
 
 
 
