--- a/music.html
+++ b/music.html
@@ -43,8 +43,8 @@
   <!-- Center Content -->
   <div class="center-content">
     <img src="photo1.jpg" alt="My Photo">
-    <h1>Thank you </h1>
-    <p>Thank you fot Hiring me.</p>
+    <h1>THANK YOU</h1>
+    <p>THANK YOU FOR HIRING ME.</p>
   </div>
 
 </body>
