--- a/skills.html
+++ b/skills.html
@@ -205,11 +205,11 @@
       <div class="skill fade-in">HTML</div>
       <div class="skill fade-in">CSS</div>
       <div class="skill fade-in">JavaScript</div>
-      <div class="skill fade-in">Cybersecurity</div>
-      <div class="skill fade-in">Cloud Computing</div>
+      <div class="skill fade-in">Cybersecurity(Beginner)</div>
+      <div class="skill fade-in">Cloud Computing(Beginner)</div>
       <div class="skill fade-in">Bug Bounty</div>
       <div class="skill fade-in">Beta Testing</div>
-      <div class="skill fade-in">System Security</div>
+      <div class="skill fade-in">System Security(Beginner)</div>
     </div>
   </section>
 </body>
