--- a/skills.html
+++ b/skills.html
@@ -205,7 +205,7 @@
       <div class="skill fade-in">HTML</div>
       <div class="skill fade-in">CSS</div>
       <div class="skill fade-in">JavaScript</div>
-      <div class="skill fade-in">Cybersecurity(Beginner)</div>
+      <div class="skill fade-in">Cybersecurity<br>(Beginner)</div>
       <div class="skill fade-in">Cloud Computing(Beginner)</div>
       <div class="skill fade-in">Bug Bounty</div>
       <div class="skill fade-in">Beta Testing</div>
