--- a/skills.html
+++ b/skills.html
@@ -206,10 +206,10 @@
       <div class="skill fade-in">CSS</div>
       <div class="skill fade-in">JavaScript</div>
       <div class="skill fade-in">Cybersecurity<br>(Beginner)</div>
-      <div class="skill fade-in">Cloud Computing(Beginner)</div>
+      <div class="skill fade-in">Cloud Computing<br>(Beginner)</div>
       <div class="skill fade-in">Bug Bounty</div>
       <div class="skill fade-in">Beta Testing</div>
-      <div class="skill fade-in">System Security(Beginner)</div>
+      <div class="skill fade-in">System Security<br>(Beginner)</div>
     </div>
   </section>
 </body>
