--- a/skills.html
+++ b/skills.html
@@ -204,7 +204,7 @@
     <div class="skills-list">
       <div class="skill fade-in">HTML</div>
       <div class="skill fade-in">CSS</div>
-      <div class="skill fade-in">JavaScript</div>
+      <div class="skill fade-in">JavaScript<br>(Beginner)</div>
       <div class="skill fade-in">Cybersecurity<br>(Beginner)</div>
       <div class="skill fade-in">Cloud Computing<br>(Beginner)</div>
       <div class="skill fade-in">Bug Bounty</div>
