--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,7 @@
 
       <div class="contact-card">
         <h2>Address</h2>
-        <p>PCMC, Maharashtra, India</p>
+        <p>Akkalkot ,Solapur, Maharashtra, India 413226</p>
       </div>
     </div>
   </section>
